# qt-llmlite

./: .gitignore  .qmake.stash  AI_RULES.md  ARCHITECTURE.md  CODING_GUIDELINES.md  CONTRIBUTING.md  INTRODUCTION.en.md  INTRODUCTION.zh-CN.md  LICENSE  PROJECT_SPEC.md  README.md  RELEASE_NOTES.md  RELEASE_READINESS_CHECKLIST.md  pyproject.toml  qt-llm.pro
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ABOUT_SNIPPETS.md  DECISIONS.md  DELIVERY_INTEGRATION.md  GITHUB_MINIMAL_GUIDE.zh-CN.md  PROJECT_INTRODUCTION.md  REPOSITORY_STRUCTURE.md  ROADMAP.md  TESTING_BASELINE.md  TOOLS_INSIDE_DESIGN.zh-CN.md
docs/agents/: PDF_TRANSLATOR_AGENT_ARCHITECTURE.md  PDF_TRANSLATOR_AGENT_DELIVERY_CHECKLIST.md  PDF_TRANSLATOR_AGENT_STATUS.md  README.md
docs/agents/releases/: v0.2.1.md
docs/developer-guide/: 01-architecture-and-layers.md  02-quick-start.md  README.md
docs/developer-guide/core/: conversationclient.md  conversationclientfactory-and-storage.md  provider-system.md  qtllmclient.md
docs/developer-guide/examples/: README.md  conversationclient-chat.md  mcp-host-bootstrap.md  minimal-qtllmclient.md  (+1 more)
docs/releases/: README.md  v0.1.0.md  v0.2.0.md  v0.2.1.md  v0.2.2.md
scripts/: install_windows.ps1
skills/auto-build-troubleshooter/: SKILL.md
skills/qt-qmake-build-env/: SKILL.md
src/qt_llm/: cli.py  client.py  config.py  prompts.py
src/qtllm/: qtllm.pro
tests/qtllm_tests/: qtllm_tests.pro  target_wrapper.bat  tst_qtllm.cpp
tools/qtcreator/: Explain.xml  FixBuild.xml  Generate.xml  Refactor.xml
(+212 files in other folders)
