[project]
name = "qt-llm"
version = "0.1.0"
description = "Qt Creator External Tools bridge for local LLM services via OpenAI-compatible APIs"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0"
]

[project.scripts]
qt-llm = "qt_llm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]